<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_home"
            android:title="@string/give_5_star_now" />
        <item
            android:id="@+id/nav_folder_download"
            android:icon="@drawable/ic_favorite"
            android:title="@string/add_favorite" />
        <item
            android:id="@+id/nav_suggest_ringtones"
            android:icon="@drawable/ic_account"
            android:title="@string/my_account" />
        <item
            android:id="@+id/nav_reset_ringtone"
            android:icon="@drawable/ic_home"
            android:title="@string/reset_movie" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_mail_feedback"
                android:icon="@drawable/ic_account"
                android:title="@string/feedback" />
        </menu>
    </item>

</menu>
