<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_login"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_avatar"
            android:layout_width="@dimen/dp_65"
            android:layout_height="@dimen/dp_65"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_200"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background" />

        <LinearLayout
            android:id="@+id/linear_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_avatar"
            android:layout_centerHorizontal="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_4"
                android:layout_marginRight="@dimen/dp_4"
                android:text="@string/title_hi"
                android:textColor="@color/color_orange_mango_tango"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_4"
                android:text="iked"
                android:textColor="@color/color_orange_mango_tango"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_title"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView

                android:id="@+id/text_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_4"
                android:text="@string/title_account"
                android:textColor="@color/color_white" />

            <TextView
                android:id="@+id/text_introduce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_4"
                android:text="@string/introduce"
                android:textColor="@color/color_white" />

            <TextView
                android:id="@+id/text_support_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_4"
                android:text="@string/support_center"
                android:textColor="@color/color_white" />

            <TextView
                android:id="@+id/text_log_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_4"
                android:text="@string/log_out"
                android:textColor="@color/color_white" />
        </LinearLayout>

    </RelativeLayout>
</layout>