<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:paddingLeft="@dimen/dp_8">

            <TextView
                android:id="@+id/caster_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cast_label"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_companies" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_cast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/caster_label" />

            <TextView
                android:id="@+id/crew_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/crew_label"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycler_cast" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_crew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/crew_label" />

            <TextView
                android:id="@+id/country_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_24"
                android:text="@string/country_label"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/companies_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/companies_label"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_country" />

            <TextView
                android:id="@+id/text_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="@dimen/dp_24"
                android:textColor="@color/color_white_smoke"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/country_label"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_companies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="43dp"
                android:textColor="@color/color_white_smoke"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/companies_label"
                app:layout_constraintTop_toBottomOf="@+id/text_country" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>