<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_cast"
                android:layout_width="@dimen/dp_130"
                android:layout_height="@dimen/dp_130"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_20"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_cast"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp_10"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:id="@+id/birthday_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:text="@string/birthday"
            android:textColor="@color/color_white"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

        <TextView
            android:textStyle="bold"
            android:id="@+id/text_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/color_white_smoke"
            android:textSize="@dimen/sp_16"
            app:layout_constraintStart_toEndOf="@+id/birthday_label"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

        <TextView
            android:id="@+id/place_of_birth_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="20dp"
            android:text="@string/place_birth"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/birthday_label" />

        <TextView
            android:id="@+id/text_place_birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="61dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/color_white_smoke"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/place_of_birth_label"
            app:layout_constraintTop_toBottomOf="@+id/birthday_label" />

        <TextView
            android:id="@+id/department_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="20dp"
            android:text="@string/department"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/place_of_birth_label" />

        <TextView
            android:id="@+id/text_department"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="73dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/color_white_smoke"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/department_label"
            app:layout_constraintTop_toBottomOf="@+id/place_of_birth_label" />

        <TextView
            android:id="@+id/list_movie_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:text="@string/list_movie"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/department_label" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_movie_label"
            app:spanCount="2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>