<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/view_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp_8"
                tools:context=".ui.movie_detail.info.MovieInfoFragment">

                <TextView
                    android:id="@+id/movie_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/color_orange_mango_tango"
                    android:textSize="@dimen/sp_20"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/color_white_smoke"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/release_date_label"
                    app:layout_constraintTop_toBottomOf="@+id/movie_title" />

                <TextView
                    android:id="@+id/release_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:text="@string/release_date_label"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movie_title" />

                <TextView
                    android:id="@+id/vote_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:text="@string/vote_average"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/release_date_label" />

                <RatingBar
                    android:id="@+id/rate_bar"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_20"
                    android:layout_marginStart="70dp"
                    android:layout_marginTop="20dp"
                    android:numStars="10"
                    android:paddingTop="@dimen/dp_4"
                    android:theme="@style/RatingBar"
                    app:layout_constraintStart_toEndOf="@+id/vote_label"
                    app:layout_constraintTop_toBottomOf="@+id/release_date" />

                <TextView
                    android:id="@+id/duration_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:text="@string/duration"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/vote_label" />

                <TextView
                    android:id="@+id/over_view_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:text="@string/over_view"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/duration_label" />

                <TextView
                    android:id="@+id/over_view_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/color_white_smoke"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/over_view_label" />

                <TextView
                    android:id="@+id/text_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="56dp"
                    android:layout_marginTop="@dimen/dp_20"
                    android:textColor="@color/color_white_smoke"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/duration_label"
                    app:layout_constraintTop_toBottomOf="@+id/vote_label" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</layout>
